--- a/portfolio.html
+++ b/portfolio.html
@@ -18,150 +18,189 @@
   </head>
   <body class="page">
     <!-- Верхня лінія -->
-    <header>
+    <header class="page-header">
       <!-- Меню nav -->
-      <nav>
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span>Studio</a
-        >
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-          <li><a href="#" class="link">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class="contact list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contact"
-            >info@devstudio.com</a
+      <div class="container border">
+        <nav class="main-nav">
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span>Studio</a
           >
-        </li>
-        <li>
-          <a href="tel:380961111111" class="contact">+38 096 111 11 11</a>
-        </li>
-      </ul>
+          <ul class="site-nav list">
+            <li class="item"><a href="./index.html" class="link">Студія</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link current">Портфоліо</a>
+            </li>
+            <li class="item"><a href="#" class="link">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="contact list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="contact"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a href="tel:380961111111" class="contact">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
-      <section>
-        <div class="container">
+      <section class="indent">
+        <div class="container portfolio">
           <h1 class="visually-hidden">Services</h1>
-          <ul class="list">
-            <li><button type="button" class="button-secondary">Усі</button></li>
-            <li>
-              <button type="button" class="button-secondary">Веб-сайти</button>
-            </li>
-            <li>
-              <button type="button" class="button-secondary">Додатки</button>
-            </li>
-            <li>
-              <button type="button" class="button-secondary">Дизайн</button>
-            </li>
-            <li>
-              <button type="button" class="button-secondary">Маркетинг</button>
-            </li>
-          </ul>
-
+          <div class="type-button">
+            <ul class="list portfolio">
+              <li class="item">
+                <button type="button" class="button-secondary different">
+                  Усі
+                </button>
+              </li>
+              <li class="item">
+                <button type="button" class="button-secondary">
+                  Веб-сайти
+                </button>
+              </li>
+              <li class="item">
+                <button type="button" class="button-secondary">Додатки</button>
+              </li>
+              <li class="item">
+                <button type="button" class="button-secondary">Дизайн</button>
+              </li>
+              <li class="item">
+                <button type="button" class="button-secondary">
+                  Маркетинг
+                </button>
+              </li>
+            </ul>
+          </div>
           <div>
-            <ul class="list">
-              <li>
+            <ul class="list model">
+              <li class="item">
                 <a href="" class="product-link">
                   <img
+                    class="view"
                     src="./images/img2-1.jpg"
                     alt="Веб-сайт з трема людьми на екрані"
                     width="370"
                   />
-
-                  <h2 class="product">Технокряк</h2>
-                  <p class="product-type">Маркетинг</p>
+                  <div class="border">
+                    <h2 class="product">Технокряк</h2>
+                    <p class="product-type">Веб-сайт</p>
+                  </div>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="product-link">
                   <img
+                    class="view"
                     src="./images/img2-2.jpg"
                     alt="Постер з двома баскетболістами"
                     width="370"
                   />
-                  <h2 class="product">Постер New Orlean vs Golden Star</h2>
-                  <p class="product-type">Дизайн</p>
+                  <div class="border">
+                    <h2 class="product">Постер New Orlean vs Golden Star</h2>
+                    <p class="product-type">Дизайн</p>
+                  </div>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="product-link">
                   <img
+                    class="view"
                     src="./images/img2-3.jpg"
                     alt="Постер додатку з рибой для рибного ресторану"
                     width="370"
                   />
-                  <h2 class="product">Ресторан Seafood</h2>
-                  <p class="product-type">Додаток</p>
+                  <div class="border">
+                    <h2 class="product">Ресторан Seafood</h2>
+                    <p class="product-type">Додаток</p>
+                  </div>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="product-link">
                   <img
+                    class="view"
                     src="./images/img2-4.jpg"
                     alt="Чорні навушники"
                     width="370"
                   />
-                  <h2 class="product">Проєкт Prime</h2>
-                  <p class="product-type">Маркетинг</p>
+                  <div class="border">
+                    <h2 class="product">Проєкт Prime</h2>
+                    <p class="product-type">Маркетинг</p>
+                  </div>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="product-link">
                   <img
+                    class="view"
                     src="./images/img2-5.jpg"
                     alt="Дві коробочки"
                     width="370"
                   />
-                  <h2 class="product">Проєкт Boxes</h2>
-                  <p class="product-type">Додаток</p>
+                  <div class="border">
+                    <h2 class="product">Проєкт Boxes</h2>
+                    <p class="product-type">Додаток</p>
+                  </div>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="product-link">
                   <img
+                    class="view"
                     src="./images/img2-6.jpg"
                     alt="Веб-сайт з картою світу"
                     width="370"
                   />
-                  <h2 class="product">Inspiration has no Borders</h2>
-                  <p class="product-type">Веб-сайт</p>
+                  <div class="border">
+                    <h2 class="product">Inspiration has no Borders</h2>
+                    <p class="product-type">Веб-сайт</p>
+                  </div>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="product-link">
                   <img
+                    class="view"
                     src="./images/img2-7.jpg"
                     alt="Журнал з фотокартками жінок"
                     width="370"
                   />
-                  <h2 class="product">Видання Limited Edition</h2>
-                  <p class="product-type">Дизайн</p>
+                  <div class="border">
+                    <h2 class="product">Видання Limited Edition</h2>
+                    <p class="product-type">Дизайн</p>
+                  </div>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="product-link">
                   <img
+                    class="view"
                     src="./images/img2-8.jpg"
                     alt="Бірка для магазину"
                     width="370"
                   />
-                  <h2 class="product">Проєкт LAB</h2>
-                  <p class="product-type">Маркетинг</p>
+                  <div class="border">
+                    <h2 class="product">Проєкт LAB</h2>
+                    <p class="product-type">Маркетинг</p>
+                  </div>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="product-link">
                   <img
+                    class="view"
                     src="./images/img2-9.jpg"
                     alt="Чоловічі руки натискають на клавіші ноутбуку"
                     width="370"
                   />
-                  <h2 class="product">Growing Business</h2>
-                  <p class="product-type">Додаток</p></a
-                >
+                  <div class="border">
+                    <h2 class="product">Growing Business</h2>
+                    <p class="product-type">Додаток</p>
+                  </div>
+                </a>
               </li>
             </ul>
           </div>
@@ -169,13 +208,13 @@
       </section>
     </main>
     <!-- Підвал -->
-    <footer>
-      <div class="section-bottom">
+    <footer class="bottom">
+      <div class="section-bottom container">
         <a href="./index.html" class="logo-bottom"
           ><span class="logo-web">Web</span>Studio</a
         >
         <address>
-          <ul class="list">
+          <ul class="comunication-list list">
             <li>
               <a
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
