--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css
 "
     />
-    <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
     <!-- Верхня лінія -->
     <header class="page-header">
       <!-- Меню nav -->
-      <div class="container border">
+      <div class="container main-block">
         <nav class="main-nav">
           <a href="./index.html" class="logo"
             ><span class="logo-web">Web</span>Studio</a
@@ -35,7 +35,7 @@
             <li class="item"><a href="#" class="link">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="contact list">
+        <ul class="contact-list list">
           <li class="item">
             <a href="mailto:info@devstudio.com" class="contact"
               >info@devstudio.com</a
@@ -50,7 +50,7 @@
     <main>
       <!-- Шапка -->
       <section class="hero">
-        <div class="container hero">
+        <div class="container">
           <h1 class="hero-title">
             Ефективні рішення для <br />
             вашого бізнесу
@@ -59,45 +59,36 @@
         </div>
       </section>
       <!-- Особливості -->
-      <section class="section indent unique">
+      <section class="section unique">
         <div class="container">
           <h2 class="visually-hidden section-title">Наші переваги</h2>
           <ul class="feature-list list">
             <li class="item">
-              <div>
-                <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p class="description">
-                  Ідейні міркування, і навіть початок повсякденної роботи з
-                  формування позиції.
-                </p>
-              </div>
+              <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="description">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
             </li>
             <li class="item">
-              <div>
-                <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-                <p class="description">
-                  Завдання організації, особливо рамки і місце навчання кадрів
-                  тягне у себе.
-                </p>
-              </div>
+              <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="description">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
             </li>
             <li class="item">
-              <div>
-                <h3 class="title">ПЛАНУВАННЯ</h3>
-                <p class="description">
-                  Так само консультація з широким активом значною мірою
-                  зумовлює.
-                </p>
-              </div>
+              <h3 class="title">ПЛАНУВАННЯ</h3>
+              <p class="description">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
             </li>
             <li class="item">
-              <div>
-                <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p class="description">
-                  Значимість цих проблем настільки очевидна, що реалізація
-                  планових завдань.
-                </p>
-              </div>
+              <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="description">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
             </li>
           </ul>
         </div>
@@ -193,12 +184,12 @@
     </main>
     <!-- Підвал -->
     <footer class="bottom">
-      <div class="section-bottom container">
+      <div class="container">
         <a href="./index.html" class="logo-bottom"
           ><span class="logo-web">Web</span>Studio</a
         >
-        <address>
-          <ul class="comunication-list list">
+        <address class="footer-address">
+          <ul class="list">
             <li>
               <a
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
