--- a/portfolio.html
+++ b/portfolio.html
@@ -14,13 +14,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css
 "
     />
-    <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
     <!-- Верхня лінія -->
     <header class="page-header">
       <!-- Меню nav -->
-      <div class="container border">
+      <div class="container main-block">
         <nav class="main-nav">
           <a href="./index.html" class="logo"
             ><span class="logo-web">Web</span>Studio</a
@@ -33,7 +33,7 @@
             <li class="item"><a href="#" class="link">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="contact list">
+        <ul class="contact-list list">
           <li class="item">
             <a href="mailto:info@devstudio.com" class="contact"
               >info@devstudio.com</a
@@ -46,175 +46,167 @@
       </div>
     </header>
     <main>
-      <section class="indent">
+      <section class="section">
         <div class="container portfolio">
           <h1 class="visually-hidden">Services</h1>
-          <div class="type-button">
-            <ul class="list portfolio">
-              <li class="item">
-                <button type="button" class="button-secondary different">
-                  Усі
-                </button>
-              </li>
-              <li class="item">
-                <button type="button" class="button-secondary">
-                  Веб-сайти
-                </button>
-              </li>
-              <li class="item">
-                <button type="button" class="button-secondary">Додатки</button>
-              </li>
-              <li class="item">
-                <button type="button" class="button-secondary">Дизайн</button>
-              </li>
-              <li class="item">
-                <button type="button" class="button-secondary">
-                  Маркетинг
-                </button>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <ul class="list model">
-              <li class="item">
-                <a href="" class="product-link">
-                  <img
-                    class="view"
-                    src="./images/img2-1.jpg"
-                    alt="Веб-сайт з трема людьми на екрані"
-                    width="370"
-                  />
-                  <div class="border">
-                    <h2 class="product">Технокряк</h2>
-                    <p class="product-type">Веб-сайт</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="" class="product-link">
-                  <img
-                    class="view"
-                    src="./images/img2-2.jpg"
-                    alt="Постер з двома баскетболістами"
-                    width="370"
-                  />
-                  <div class="border">
-                    <h2 class="product">Постер New Orlean vs Golden Star</h2>
-                    <p class="product-type">Дизайн</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="" class="product-link">
-                  <img
-                    class="view"
-                    src="./images/img2-3.jpg"
-                    alt="Постер додатку з рибой для рибного ресторану"
-                    width="370"
-                  />
-                  <div class="border">
-                    <h2 class="product">Ресторан Seafood</h2>
-                    <p class="product-type">Додаток</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="" class="product-link">
-                  <img
-                    class="view"
-                    src="./images/img2-4.jpg"
-                    alt="Чорні навушники"
-                    width="370"
-                  />
-                  <div class="border">
-                    <h2 class="product">Проєкт Prime</h2>
-                    <p class="product-type">Маркетинг</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="" class="product-link">
-                  <img
-                    class="view"
-                    src="./images/img2-5.jpg"
-                    alt="Дві коробочки"
-                    width="370"
-                  />
-                  <div class="border">
-                    <h2 class="product">Проєкт Boxes</h2>
-                    <p class="product-type">Додаток</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="" class="product-link">
-                  <img
-                    class="view"
-                    src="./images/img2-6.jpg"
-                    alt="Веб-сайт з картою світу"
-                    width="370"
-                  />
-                  <div class="border">
-                    <h2 class="product">Inspiration has no Borders</h2>
-                    <p class="product-type">Веб-сайт</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="" class="product-link">
-                  <img
-                    class="view"
-                    src="./images/img2-7.jpg"
-                    alt="Журнал з фотокартками жінок"
-                    width="370"
-                  />
-                  <div class="border">
-                    <h2 class="product">Видання Limited Edition</h2>
-                    <p class="product-type">Дизайн</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="" class="product-link">
-                  <img
-                    class="view"
-                    src="./images/img2-8.jpg"
-                    alt="Бірка для магазину"
-                    width="370"
-                  />
-                  <div class="border">
-                    <h2 class="product">Проєкт LAB</h2>
-                    <p class="product-type">Маркетинг</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="" class="product-link">
-                  <img
-                    class="view"
-                    src="./images/img2-9.jpg"
-                    alt="Чоловічі руки натискають на клавіші ноутбуку"
-                    width="370"
-                  />
-                  <div class="border">
-                    <h2 class="product">Growing Business</h2>
-                    <p class="product-type">Додаток</p>
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="list portfolio">
+            <li class="item">
+              <button type="button" class="button-secondary different">
+                Усі
+              </button>
+            </li>
+            <li class="item">
+              <button type="button" class="button-secondary">Веб-сайти</button>
+            </li>
+            <li class="item">
+              <button type="button" class="button-secondary">Додатки</button>
+            </li>
+            <li class="item">
+              <button type="button" class="button-secondary">Дизайн</button>
+            </li>
+            <li class="item">
+              <button type="button" class="button-secondary">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="list model">
+            <li class="item">
+              <a href="" class="product-link">
+                <img
+                  class="view"
+                  src="./images/img2-1.jpg"
+                  alt="Веб-сайт з трема людьми на екрані"
+                  width="370"
+                />
+                <div class="border">
+                  <h2 class="product">Технокряк</h2>
+                  <p class="product-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="product-link">
+                <img
+                  class="view"
+                  src="./images/img2-2.jpg"
+                  alt="Постер з двома баскетболістами"
+                  width="370"
+                />
+                <div class="border">
+                  <h2 class="product">Постер New Orlean vs Golden Star</h2>
+                  <p class="product-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="product-link">
+                <img
+                  class="view"
+                  src="./images/img2-3.jpg"
+                  alt="Постер додатку з рибой для рибного ресторану"
+                  width="370"
+                />
+                <div class="border">
+                  <h2 class="product">Ресторан Seafood</h2>
+                  <p class="product-type">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="product-link">
+                <img
+                  class="view"
+                  src="./images/img2-4.jpg"
+                  alt="Чорні навушники"
+                  width="370"
+                />
+                <div class="border">
+                  <h2 class="product">Проєкт Prime</h2>
+                  <p class="product-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="product-link">
+                <img
+                  class="view"
+                  src="./images/img2-5.jpg"
+                  alt="Дві коробочки"
+                  width="370"
+                />
+                <div class="border">
+                  <h2 class="product">Проєкт Boxes</h2>
+                  <p class="product-type">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="product-link">
+                <img
+                  class="view"
+                  src="./images/img2-6.jpg"
+                  alt="Веб-сайт з картою світу"
+                  width="370"
+                />
+                <div class="border">
+                  <h2 class="product">Inspiration has no Borders</h2>
+                  <p class="product-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="product-link">
+                <img
+                  class="view"
+                  src="./images/img2-7.jpg"
+                  alt="Журнал з фотокартками жінок"
+                  width="370"
+                />
+                <div class="border">
+                  <h2 class="product">Видання Limited Edition</h2>
+                  <p class="product-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="product-link">
+                <img
+                  class="view"
+                  src="./images/img2-8.jpg"
+                  alt="Бірка для магазину"
+                  width="370"
+                />
+                <div class="border">
+                  <h2 class="product">Проєкт LAB</h2>
+                  <p class="product-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="product-link">
+                <img
+                  class="view"
+                  src="./images/img2-9.jpg"
+                  alt="Чоловічі руки натискають на клавіші ноутбуку"
+                  width="370"
+                />
+                <div class="border">
+                  <h2 class="product">Growing Business</h2>
+                  <p class="product-type">Додаток</p>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
     <!-- Підвал -->
     <footer class="bottom">
-      <div class="section-bottom container">
+      <div class="container">
         <a href="./index.html" class="logo-bottom"
           ><span class="logo-web">Web</span>Studio</a
         >
-        <address>
-          <ul class="comunication-list list">
+        <address class="footer-address">
+          <ul class="list">
             <li>
               <a
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
