--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="page">
+  <body>
     <!-- Верхня лінія -->
     <header class="page-header">
       <!-- Меню nav -->
